# new-video1

./: .gitignore  README.md
backend/: FRAMEPACK_GUIDE.md  LOCAL_MODEL_GUIDE.md  pyproject.toml  requirements.txt  test_full_pipeline.py  test_local_model.py  test_video_generation.py
backend/.hypothesis/constants/: 03305cee7742d022  138d4507d422279a  1adbf0ad3a57fa75  1f5b6d6840a9ae84  225705fb9c4802a8  (+23 more)
backend/ai_video_generator_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  database.py  main.py
backend/tests/: conftest.py  test_characters_api.py  test_config_api.py  test_database.py  test_error_handler.py  test_events_api.py  test_export_api.py  test_ffmpeg_service.py  test_framepack_service.py  test_health.py  test_hotspot_searcher.py  test_image_service.py  test_integration.py  test_iteration_engine.py  test_llm_service.py  test_pipeline_engine.py  test_projects.py  test_property_characters.py  test_property_ffmpeg_composition.py  test_property_pipeline_autosave.py  test_property_project_persistence.py  test_property_scenes.py  test_property_templates.py  test_property_text_storage.py  test_property_text_validation.py  test_property_voice_assignment.py  test_property_weighted_average.py  test_regenerate_keyframe_api.py  test_scenes_api.py  test_script_evaluator_v2.py  test_script_generator.py  test_script_optimization_api.py  test_script_optimization_models.py  test_search_api_client.py  test_technique_searcher.py  test_template_service.py  test_templates_api.py  test_text_service.py  test_tts_api.py  test_tts_service.py  (+2 more)
(+121 files in other folders)
